<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Senior TV Launcher</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="section_display">Display</string>
    <string name="section_background">Background</string>
    <string name="section_clock_date">Clock &amp; Date</string>
    <string name="section_app_buttons">App Buttons</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="button_size">Button Size</string>
    <string name="show_app_name">Show App Name</string>
    <string name="button_shape">Button Shape</string>
    <string name="shape_circle">Circle</string>
    <string name="shape_rounded_square">Rounded</string>
    <string name="shape_square">Square</string>
    <string name="set_background_image">Set Background Image</string>
    <string name="remove_background">Remove Background</string>
    <string name="enable_blur">Enable Blur</string>
    <string name="blur_level">Blur Level</string>
    <string name="show_clock">Show Clock</string>
    <string name="show_date">Show Date</string>
    <string name="select_app">Select App</string>
    <string name="change_app">Change App</string>
    <string name="remove">Remove</string>
    <string name="empty_slot">Empty</string>
    <string name="slot_number">Slot #%1$d</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings_saved">Settings saved</string>
    <string name="pin_title">Enter the code shown below to access Settings</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="cancel">Cancel</string>
    <string name="timeout_hint">Closes automatically in %1$d seconds</string>
    <string name="click_sound">Click sound on tile focus</string>
    <string name="open_device_settings">Open device settings</string>
    <string name="default_launcher_dialog_title">Set as Default Launcher</string>
    <string name="default_launcher_dialog_message">Would you like to set Senior TV Launcher as the default home screen for this device?</string>
    <string name="default_launcher_dialog_yes">Set as Default</string>
    <string name="default_launcher_dialog_no">Not Now</string>
</resources>
